--- a/src/components/PostComponents/Postcard.scss
+++ b/src/components/PostComponents/Postcard.scss
@@ -7,3 +7,11 @@
 .input-container {
     padding-top: 10px;
 }
+.home-posts-container {
+    border-radius: 30px;
+    background-color: #f8f9fa;
+}
+.alter-border {
+    overflow: hidden;
+    box-shadow: rgb(204, 204, 204) 0px 1px 0px 0px;
+}
