--- a/src/components/PostComponents/Postcard.scss
+++ b/src/components/PostComponents/Postcard.scss
@@ -2,7 +2,18 @@
     text-decoration: none;
 }
 .avatar-mui:hover {
-    background-color: rgb(64, 114, 31);
+    animation-name: example;
+    animation-duration: 2s;
+    @keyframes example {
+        0% {
+            transform: rotate(0deg);
+            background-color: #607d8b;
+        }
+        100% {
+            transform: rotate(360deg);
+            background-color: #74430c;
+        }
+    }
 }
 .input-container {
     padding-top: 10px;
@@ -14,4 +25,23 @@
 .alter-border {
     overflow: hidden;
     box-shadow: rgb(204, 204, 204) 0px 1px 0px 0px;
+}
+.form-control-plaintext {
+    padding-left: 10px;
+}
+textarea::-webkit-scrollbar {
+    display: none;
+}
+#textarea {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+#textarea:read-write:focus {
+    outline: none;
+}
+[contenteditable][placeholder]:empty:before {
+    content: attr(placeholder);
+    position: absolute;
+    color: gray;
+    background-color: transparent;
 }
