--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,3 @@
-body {
-    background: linear-gradient(to right, #232526, #414345);
-}
-::-webkit-scrollbar {
-    width: 0px;
-}
+@import "~bootstrap/scss/bootstrap";
+
+/* The following line can be included in your src/index.js or App.js file */
