--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -25,3 +25,9 @@
         transform: rotate(360deg);
     }
 }
+
+/* 
+
+I will show you how to change a height of a standard Bootstrap navbar.
+
+*/
